fix css bg on mobile

--- a/src/modules/landingV3/styles.module.scss
+++ b/src/modules/landingV3/styles.module.scss
@@ -15,6 +15,7 @@
 }
 
 .bottom {
+  background-color: rgb(250, 250, 250);
 
   //margin-top: 80px;
   //@include is-min-table {
